--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,5 +1,29 @@
 .Dictionary form {
 display: block;
-margin: 0 auto;
+font-family: 'Quicksand', sans-serif;
+margin: 20px auto;
 text-align: center;
+}
+
+.Dictionary .form-entry {
+margin: 15px;
+min-width: 300px;
+}
+
+.Dictionary .form-btn {
+background-color: #3f3d56;
+color: #c4c3c3;
+
+font-size: 18px;
+font-weight: 700;
+letter-spacing: 2px;
+text-transform: uppercase;
+}
+
+@media (max-width: 760px) {
+    
+.Dictionary .form-entry {
+text-align: center;
+}
+
 }
