--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,19 +1,28 @@
-.Dictionary form {
+.Dictionary .Hero {
+background-color: rgb(204, 204, 204, 0.7);
+border-radius: 4px;
+margin-bottom: 20px;
+padding: 20px;
+}
+
+.Dictionary .search-form {
 display: block;
 font-family: 'Quicksand', sans-serif;
 margin: 20px auto;
 text-align: center;
+
 }
 
 .Dictionary .form-entry {
 font-size: 20px;
+font-weight: 500;
 margin: 15px;
 min-width: 300px;
 }
 
 .Dictionary .form-btn {
 background-color: #3f3d56;
-color: #c4c3c3;
+color: #e6e6e6;
 font-size: 18px;
 font-weight: 700;
 letter-spacing: 2px;
