--- a/src/Results.css
+++ b/src/Results.css
@@ -2,3 +2,7 @@
     font-family: 'Merriweather', serif;
     font-size: 40px;
 }
+
+.Results .Meaning {
+    font-family: 'Quicksand', sans-serif;
+}
