--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,6 +1,6 @@
 .Dictionary .Hero {
-background-color: rgb(204, 204, 204, 0.7);
-border-radius: 4px;
+background-color: rgb(204, 204, 204, 0.9);
+border-radius: 10px;
 margin-bottom: 20px;
 padding: 20px;
 }
@@ -14,19 +14,29 @@ text-align: center;
 }
 
 .Dictionary .form-entry {
+border-radius: 7px;
 font-size: 20px;
 font-weight: 500;
 margin: 15px;
 min-width: 300px;
+padding: 15px;
 }
 
 .Dictionary .form-btn {
 background-color: #3f3d56;
+border-radius: 7px;
 color: #e6e6e6;
-font-size: 18px;
+font-size: 15px;
 font-weight: 700;
 letter-spacing: 2px;
+line-height: 32px;
+text-align: center;
 text-transform: uppercase;
+transition: all ease-in-out 2ms;
+}
+
+.Dictionary .form-btn:hover {
+transform: scale(1.1);
 }
 
 @media (max-width: 760px) {
