Edited Results.css, added defaultWord to Dictionary

--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,4 +1,4 @@
-.Dictionary .Hero {
+.Dictionary .Hero, .Results {
 background-color: rgb(204, 204, 204, 0.9);
 border-radius: 10px;
 margin-bottom: 20px;
