--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -9,7 +9,7 @@
     font-size: 25px;
     font-weight: 800;
     line-height: 33px;
-    margin: 20px;
+    margin: 20px 0 10px;
     text-align: center;
     text-transform: uppercase;
 }
