--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,4 +1,15 @@
 .Dictionary .Hero {
+    background-color: rgb(255, 255, 255, 0.4);
+    border-radius: 15px;
+    color: #3f3d56;
+    display: block;
+    margin: 100px auto;
+    max-width: 700px;
+    padding: 20px 50px 1px;
+   
+  }
+
+.Dictionary .hero-form {
 background-color: rgb(204, 204, 204, 0.9);
 border-radius: 10px;
 margin-bottom: 20px;
@@ -39,6 +50,23 @@ transition: all ease-in-out 2ms;
 
 .Dictionary .form-btn:hover {
 transform: scale(1.1);
+}
+
+.Dictionary .results-container {
+    background-color: #c7c5c4;
+    padding: 20px 80px;
+}
+
+.Dictionary .scrollSuggestion {
+  background-color: rgb(204, 204, 204, 0.9);
+  border-radius: 6px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.Dictionary .Photos .results-photos {
+  border-radius: 3px;
+
 }
 
 
