Edited Footer css, Dictionary Hero responsiveness

--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -74,6 +74,10 @@ transform: scale(1.1);
 
 @media (max-width: 760px) {
 
+  .Dictionary .Hero {
+border-radius: 0;
+  }
+
 .Dictionary .form-entry {
 text-align: center;
 }
