--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,5 +1,11 @@
-.Footer p {
-    color: #e6e6e6;
+.Footer {
+  color: #e6e6e6;  
+  font-family: 'Quicksand', sans-serif;
+  font-weight: 700;
+  letter-spacing: 1.5px;
+}
+
+.Footer p {   
     padding: 20px 0 10px;
     text-align: center;
 }
@@ -7,8 +13,7 @@
 .Footer a {
     color: #e6e6e6;
     border-radius: 5px;
-    font-weight: bold;
-    letter-spacing: 1.5px;
+    
     padding: 2px 2px 5px;
     text-decoration: none;
     transition: all ease-in-out 2ms;
