--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -3,10 +3,28 @@
     border-radius: 15px;
     color: #3f3d56;
     display: block;
-    margin: 100px auto;
+    margin: 50px auto;
     max-width: 700px;
     padding: 20px 50px 1px;
    
+  }
+
+  .Dictionary .hero-form h1 {
+     font-size: 60px;
+    font-weight: 550;
+    line-height: 1;
+    letter-spacing: 3px;
+    margin: 10px;
+  }
+
+  .Dictionary .hero-form h1, .hero-form h2 {
+    font-family: 'Merriweather', serif;
+      text-align: center;
+  }
+
+  .Dictionary h2 {
+font-size: 35px;
+font-weight: 500;
   }
 
 .Dictionary .hero-form {
@@ -76,8 +94,11 @@ transform: scale(1.1);
 
   .Dictionary .Hero {
 border-radius: 0;
-margin: 50px auto;
 max-width: 100%;
+  }
+
+  .Dictionary h1 {
+    font-size: 50px;
   }
 
 .Dictionary .form-entry {
