--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -4,7 +4,7 @@
     border-radius: 10px;
     color: #3f3d56;
     display: block;
-    margin: 50px auto 100px;
+    margin: 80px auto;
     max-width: 700px;
     padding: 20px 50px;
   }
@@ -93,7 +93,7 @@ transform: scale(1.1);
   .Dictionary .Hero {
 border-radius: 0;
 max-width: 100%;
-margin-bottom: 150px;
+margin-bottom: 120px;
   }
 
   .Dictionary .hero-form h1 {
@@ -109,13 +109,10 @@ margin-bottom: 150px;
   }
 
 .Dictionary .form-entry {
-  
   font-size: 18px;
-  
- 
   min-width: 150px;
   padding: 10px;
-  }
+}
 
 .Dictionary .results-container {
    padding: 10px 30px;
