--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -9,6 +9,13 @@
     padding: 20px 50px;
   }
 
+.Dictionary .hero-form {
+    background-color: rgb(204, 204, 204, 0.9);
+    border-radius: 8px;
+    margin-bottom: 20px;
+    padding: 20px;
+}
+
   .Dictionary .hero-form h1 {
      font-size: 60px;
     font-weight: 550;
@@ -27,12 +34,7 @@ font-size: 35px;
 font-weight: 500;
   }
 
-.Dictionary .hero-form {
-background-color: rgb(204, 204, 204, 0.9);
-border-radius: 8px;
-margin-bottom: 20px;
-padding: 20px;
-}
+
 
 
 .Dictionary .search-form, .toTopBtn  {
@@ -96,8 +98,13 @@ max-width: 100%;
 margin-bottom: 120px;
   }
 
+  .Dictionary .hero-form {
+    padding: 15px 5px;
+  }
+
   .Dictionary .hero-form h1 {
     font-size: 38px;
+    margin: 10px auto;
   }
 
   .Dictionary .hero-form h2 {
@@ -110,7 +117,7 @@ margin-bottom: 120px;
 
 .Dictionary .form-entry {
   font-size: 18px;
-  margin: 5px auto 10px;
+  min-width: 200px;
   padding: 10px;
 }
 
